# rust-compris

./: CPS.md  Cargo.toml  README.md  TODO
cli/: Cargo.toml
cli/src/: cli.rs  convert.rs  errors.rs  main.rs  run.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  completion.rs  convert.rs  errors.rs  main.rs  run.rs  version.rs
crates/compris/: Cargo.toml
crates/compris/examples/: read.rs  read_xjson.rs  serde.rs
crates/compris/src/: boolean.rs  bytes.rs  float.rs  format.rs  hints.rs  integer.rs  lib.rs  list.rs  map.rs  meta.rs  null.rs  string.rs  styles.rs  to_map_string_key.rs  unsigned_integer.rs  value.rs  write_debug.rs
crates/compris/src/read/: errors.rs  hints.rs  reader.rs  value_builder.rs
crates/compris/src/read/formats/: cbor.rs  json.rs  xml.rs  yaml.rs
crates/compris/src/ser/: boolean.rs  bytes.rs  errors.rs  float.rs  integer.rs  list.rs  map.rs  mod.rs  serialization_mode.rs  serializer.rs  unsigned_integer.rs  value.rs  value_with_serialization_mode.rs  write.rs
crates/compris/src/ser/formats/: cbor.rs  json.rs  message_pack.rs  xml.rs  yaml.rs
crates/cpsq/: Cargo.toml
crates/cpsq/src/: cli.rs  completion.rs  convert.rs  errors.rs  main.rs  run.rs  version.rs
crates/derive-resolve/: Cargo.toml
crates/derive-resolve/src/: field_attribute.rs  generate_field_segment.rs  generate_impl_resolve.rs  lib.rs  struct_attribute.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  utils.rs
crates/macros/src/derive_resolve/: mod.rs
crates/macros/src/derive_resolve/attributes/: enum.rs  field.rs  mod.rs  struct.rs  variant.rs
crates/macros/src/derive_resolve/enum_generator/: generator.rs  generics.rs  handle_single_variant.rs  handle_variant.rs  impl_resolve.rs  impl_resolve_generics.rs  mod.rs
crates/macros/src/derive_resolve/generator/: generator.rs  handle_field.rs  handle_null.rs  handle_other_keys.rs  impl_citable.rs  impl_citable_fields.rs  impl_has_citable_fields.rs  impl_has_meta.rs  impl_resolve.rs  impl_resolve_generics.rs  mod.rs
crates/macros/src/derive_resolve/struct_generator/: generator.rs  generics.rs  handle_field.rs  handle_null.rs  handle_other_keys.rs  handle_single_field.rs  impl_annotated.rs  impl_citable.rs  impl_citable_fields.rs  impl_has_meta.rs  impl_resolve.rs  impl_resolve_generics.rs  mod.rs
macros/: Cargo.toml
macros/src/: lib.rs
macros/src/derive_resolve/attributes/: enum.rs  field.rs  variant.rs
macros/src/derive_resolve/enum_generator/: generator.rs  generics.rs  handle_single_variant.rs  impl_resolve.rs  mod.rs
macros/src/derive_resolve/struct_generator/: generics.rs  handle_field.rs  handle_null.rs  handle_other_keys.rs  handle_single_field.rs  impl_annotated.rs  impl_resolve.rs
scripts/: build  build-docs  build-wasi  build-wasm  examples  expand  install-for-user
