[workspace]
members = ["crates/library", "crates/macros", "crates/cli"]
resolver = "3"

[patch.crates-io]
kutil-cli = { path = "../rust-kutil/crates/cli" }
kutil-std = { path = "../rust-kutil/crates/std" }
read-url = { path = "../rust-read-url/crates/library" }

[profile.release]
strip = "debuginfo"
lto = true
