[package]
edition = "2021"

name = "compris"
description = "Composite Primitive Schema (CPS) for Rust"
version = "0.0.1"
rust-version = "1.83"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-compris"
authors = ["Tal Liron"]

readme = "../../README.md"
# include = [
#     "/src/**",
#     "/examples/**",
#     "../../CPS.md"
# ]

categories = ["data-structures", "encoding", "parsing"] # https://crates.io/category_slugs
keywords = ["cps"]

[dependencies]
base64 = "0.22.1"
borc = { optional = true, version = "0.6.0" }
rmp = { optional = true, version = "0.8" }
num-traits = "0.2.19"
ordered-float = "4.5.0"
ordermap = "0.5.4"
owo-colors = "4.1.0"
rmp-serde = { optional = true, version = "1.3.0" }
saphyr-parser = { optional = true, version = "0.0.3" }
serde = { optional = true, version = "1.0.215" }
serde-xml-rs = { optional = true, version = "0.6.0" }
serde_yml = { optional = true, version = "0.0.12" } # YAML (replace with saphyr-serde?)
struson = { optional = true, version = "0.6.0" }
thiserror = "2.0.5"
tracing = "0.1.41"

[features]
default = ["yaml", "json", "xml", "cbor", "messagepack"]
yaml = ["dep:saphyr-parser"]
json = ["dep:struson"]
xml = []
cbor = ["dep:borc"]
messagepack = ["dep:rmp"]

# Not default
serde = ["ordered-float/serde", "ordermap/serde", "dep:rmp-serde", "dep:serde", "dep:serde-xml-rs", "dep:serde_yml", "struson/serde"]

[[example]]
name = "read"

[[example]]
name = "read_xjson"

[[example]]
name = "serde"
required-features = ["serde"]
