[package]
edition = "2021"

name = "cpsq"
description = "Query and convert Composite Primitive Schema (CPS) formats"
version = "0.0.1"
rust-version = "1.83"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-compris"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = ["data-structures", "encoding", "parsing"] # https://crates.io/category_slugs
keywords = ["cps", "yaml", "json", "xjson", "xml", "cbor", "messagepack"]

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete_command = "0.6.1"
common-cli = "0.0.1"
compris = { path = "../compris", version = "0.0.1", features = ["serde"] }
read-url = "0.0.1"
thiserror = "2.0.5"
tracing = "0.1.41"
