[package]
edition = "2021"

name = "compris-macros"
description = "Procedural macros for Compris"
version = "0.0.1"
rust-version = "1.84"

license = "MIT OR Apache-2.0"
repository = "https://github.com/tliron/rust-compris"
documentation = "https://docs.rs/compris"
authors = ["Tal Liron"]

readme = "../../README.md"

categories = ["data-structures", "encoding", "parsing"] # https://crates.io/category_slugs
keywords = ["cps"]

[lib]
proc-macro = true

[dependencies]
deluxe = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
